tests/errors/type_check/rvalue_typing/rvalue_enum_constr_unknown_variant.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f() {
            o: Option;
            entry:
            o = Option::Wat(42);
            return
        }
        