tests/errors/type_check/rvalue_typing/rvalue_enum_constr_unknown_variant.err.expected
error: at 6:13: [TC-NoSuchVariant] In function 'f', block 'entry': Enum 'Option' has no variant 'Wat'
   |
 6 |             o = Option::Wat(42);
   |             ^^^^^^^^^^^^^^^^^^^
